# libnifalcon_osc

./: CMakeLists.txt  LICENSE.txt  README.markdown
examples/chuck/: libnifalcon_osc_test.ck
examples/pd/: falcon_osc_wall.pd
examples/supercollider/: falcon_osc.rtf
src/: falcon_osc.cpp
